# kmms_prog_hw_novgorodcev

./: .gitignore
2025_09_20_module_app/: build_run_module_app  io.cpp  sortings.cpp
2025_10_31_Module_app+/: 123  Constants.hpp  Untitled-1.cpp  array_functions.cpp  array_functions.hpp  compile_and_run.bat  input_output.cpp  input_output.hpp  main.cpp
2025_11_26_Module_app/: build_module.sh  build_run_module.bat  main.cpp  menu.hpp  menu_functions.cpp  menu_functions.hpp  menu_items.cpp  menu_items.hpp
2026-02-14_long_numbers/: CMakeLists.txt
2026-02-14_long_numbers/long_number/: CMakeLists.txt  long_number.cpp  long_number.hpp
2026-02-14_long_numbers/test/: CMakeLists.txt  test1.cpp
2026-02-15_long_numbers/22_02_long_numbers/test/: CMakeLists.txt  long_number_tests.cpp
2026-05-02_The_Best_Game_In_The_World/3_Stage/: CMakeLists.txt  config.hpp  enemy.hpp  entity.hpp  player.cpp
2026-05-02_The_Best_Game_In_The_World/3_Stage/include/: bounds.hpp  constants.hpp  game.hpp  game_object.hpp  game_objects.hpp  level.hpp  player.hpp  render.hpp  renderer.hpp
2026-05-02_The_Best_Game_In_The_World/3_Stage/src/: Config.hpp  Engine.cpp  Engine.hpp  Entities.cpp  Entities.hpp  Level.cpp  Level.hpp  enemy.cpp  game.cpp  level.cpp  main.cpp  player.cpp  renderer.cpp
29.11.2025/: main.cpp  menu_functions.cpp  menu_functions.hpp  menu_items.cpp  menu_items.hpp
Hometask/: build_run.bat  run_tests.bat
Hometask/projects/unit_test_example/: CMakeLists.txt
Hometask/projects/unit_test_example/src/: CMakeLists.txt  io.cpp  io.hpp  main.cpp  sortings.cpp  sortings.hpp
Hometask/projects/unit_test_example/test/: CMakeLists.txt  test_bubble.cpp
(+17 files in other folders)
